# EgretWind

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
egretwind/: manage.py
egretwind/article/: models.py  urls.py
egretwind/article/migrations/: 0001_initial.py  0002_alter_article_table.py
egretwind/article/serializer/: __init__.py  article.py
egretwind/article/views/: __init__.py  article.py
egretwind/common/: __init__.py
egretwind/common/database/: __init__.py  search.py
egretwind/common/mixins/: __init__.py  app_model_mixin.py
egretwind/common/result/: __init__.py  result.py
egretwind/egretwind/: asgi.py  settings.py  urls.py  wsgi.py
egretwind/user/: models.py  urls.py
egretwind/user/migrations/: 0001_initial.py
egretwind/user/serializer/: user_test.py
egretwind/user/views/: __init__.py  user_test.py
frontend/: components.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: article.ts  test.ts
frontend/src/api/type/: article.ts
frontend/src/components/: index.ts
frontend/src/components/tiptap/: Tiptap.vue
frontend/src/layout/: AppLayout.vue
frontend/src/layout/nav-bar/: index.vue
frontend/src/request/: Result.ts  index.ts
frontend/src/router/: index.ts  routes.ts
frontend/src/styles/: global.css  main.css
frontend/src/type/: common.ts  test.ts
frontend/src/utils/: message.ts
frontend/src/views/home-page/: index.vue
frontend/src/views/t1t/: test.vue
frontend/src/views/tiptap/: tiptap.vue
(+1 files in other folders)
